--- a/debian/control.in
+++ b/debian/control.in
@@ -1,4 +1,4 @@
-Source: gdm3
+Source: gdm
 Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
@@ -47,16 +47,16 @@ Build-Depends: gnome-pkg-tools (>= 0.16.3),
                libsystemd-daemon-dev (>= 186) [linux-any],
                libsystemd-journal-dev [linux-any]
 Standards-Version: 3.9.6
-Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gdm3/
-Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gdm3/
+Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gdm/
+Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gdm/
 
-Package: gdm3
+Package: gdm
 Architecture: linux-any
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libgdm1 (= ${binary:Version}),
-         gir1.2-gdm3 (= ${binary:Version}),
+         gir1.2-gdm (= ${binary:Version}),
          adduser,
          libpam-modules (>= 0.72-1),
          libpam-runtime (>= 0.76-13.1),
@@ -107,9 +107,9 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          ${gir:Depends}
-Breaks: gdm3 (<< 3.8.3-3~)
+Breaks: gdm (<< 3.8.3-3~)
 Conflicts: libgdm
-Replaces: libgdm, gdm3 (<< 3.8.3-3~)
+Replaces: libgdm, gdm (<< 3.8.3-3~)
 Description: GNOME Display Manager (shared library)
  GDM provides the equivalent of a "login:" prompt for X displays: it 
  asks for a login and starts graphical sessions.
@@ -126,7 +126,7 @@ Section: libdevel
 Architecture: linux-any
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libgdm1 (= ${binary:Version}),
-         gir1.2-gdm3 (= ${binary:Version}),
+         gir1.2-gdm (= ${binary:Version}),
          ${shlibs:Depends},
          ${misc:Depends},
          ${gir:Depends}
@@ -141,7 +141,7 @@ Description: GNOME Display Manager (development files)
  .
  This package contains header and development files.
 
-Package: gir1.2-gdm3
+Package: gir1.2-gdm
 Section: introspection
 Architecture: linux-any
 Depends: ${gir:Depends},
