--- a/debian/control.in
+++ b/debian/control.in
@@ -1,7 +1,8 @@
 Source: gdm
 Section: gnome
 Priority: optional
-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-main
 Uploaders: @GNOME_TEAM@
 Build-Depends: gnome-pkg-tools (>= 0.16.3),
                debhelper (>= 8.1.3),
@@ -47,8 +48,6 @@ Build-Depends: gnome-pkg-tools (>= 0.16.3),
                libsystemd-daemon-dev (>= 186) [linux-any],
                libsystemd-journal-dev [linux-any]
 Standards-Version: 3.9.6
-Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gdm/
-Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gdm/
 
 Package: gdm
 Architecture: linux-any
@@ -56,7 +55,7 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libgdm1 (= ${binary:Version}),
-         gir1.2-gdm (= ${binary:Version}),
+         gir1.2-gdm-1.0 (= ${binary:Version}),
          adduser,
          libpam-modules (>= 0.72-1),
          libpam-runtime (>= 0.76-13.1),
@@ -75,15 +74,14 @@ Depends: ${shlibs:Depends},
          dconf-gsettings-backend (>= 0.20),
          ucf,
          x11-common (>= 1:7.6+11),
-         x11-xserver-utils
+         x11-xserver-utils,
+         bash (>= 4.3)
 Recommends: zenity,
             xserver-xephyr,
             x11-xkb-utils,
             xserver-xorg,
             at-spi2-core,
-            gnome-icon-theme,
-            gnome-icon-theme-symbolic,
-            desktop-base (>= 6)
+            adwaita-icon-theme
 Suggests: libpam-gnome-keyring,
           gnome-orca
 Provides: x-display-manager
@@ -126,7 +124,7 @@ Section: libdevel
 Architecture: linux-any
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libgdm1 (= ${binary:Version}),
-         gir1.2-gdm (= ${binary:Version}),
+         gir1.2-gdm-1.0 (= ${binary:Version}),
          ${shlibs:Depends},
          ${misc:Depends},
          ${gir:Depends}
@@ -141,7 +139,7 @@ Description: GNOME Display Manager (development files)
  .
  This package contains header and development files.
 
-Package: gir1.2-gdm
+Package: gir1.2-gdm-1.0
 Section: introspection
 Architecture: linux-any
 Depends: ${gir:Depends},
