+ gdm.config: tweak lightdm

--- a/debian/gdm.config
+++ b/debian/gdm.config
@@ -6,6 +6,12 @@
 
 set -e
 
+# do not show question for dist-upgrades to precise, we introduce lightdm there
+# and lightdm sets itself as default
+if [ -n "$RELEASE_UPGRADE_IN_PROGRESS" ]; then
+    exit 0
+fi
+
 # source debconf library
 . /usr/share/debconf/confmodule
 
