Imported Upstream version 3.14.0

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -179,6 +179,7 @@ AM_DEFAULT_VERBOSITY = @AM_DEFAULT_VERBOSITY@
 AR = @AR@
 AT_BINDIR = @AT_BINDIR@
 AT_SPI_REGISTRYD_DIR = @AT_SPI_REGISTRYD_DIR@
+AUTHENTICATION_AGENT_DIR = @AUTHENTICATION_AGENT_DIR@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
@@ -241,6 +242,8 @@ GDM_RAN_ONCE_MARKER_FILE_EXPANDED = @GDM_RAN_ONCE_MARKER_FILE_EXPANDED@
 GDM_RUN_DIR = @GDM_RUN_DIR@
 GDM_SCREENSHOT_DIR = @GDM_SCREENSHOT_DIR@
 GDM_SESSION_DEFAULT_PATH = @GDM_SESSION_DEFAULT_PATH@
+GDM_SIMPLE_GREETER_EXTENSIONS_DATA_DIR = @GDM_SIMPLE_GREETER_EXTENSIONS_DATA_DIR@
+GDM_SIMPLE_GREETER_PLUGINS_DIR = @GDM_SIMPLE_GREETER_PLUGINS_DIR@
 GDM_USERNAME = @GDM_USERNAME@
 GDM_WORKING_DIR = @GDM_WORKING_DIR@
 GDM_XAUTH_DIR = @GDM_XAUTH_DIR@
