--- a/data/applications/Makefile.in
+++ b/data/applications/Makefile.in
@@ -149,6 +149,7 @@ AM_DEFAULT_VERBOSITY = @AM_DEFAULT_VERBOSITY@
 AR = @AR@
 AT_BINDIR = @AT_BINDIR@
 AT_SPI_REGISTRYD_DIR = @AT_SPI_REGISTRYD_DIR@
+AUTHENTICATION_AGENT_DIR = @AUTHENTICATION_AGENT_DIR@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
@@ -211,6 +212,8 @@ GDM_RAN_ONCE_MARKER_FILE_EXPANDED = @GDM_RAN_ONCE_MARKER_FILE_EXPANDED@
 GDM_RUN_DIR = @GDM_RUN_DIR@
 GDM_SCREENSHOT_DIR = @GDM_SCREENSHOT_DIR@
 GDM_SESSION_DEFAULT_PATH = @GDM_SESSION_DEFAULT_PATH@
+GDM_SIMPLE_GREETER_EXTENSIONS_DATA_DIR = @GDM_SIMPLE_GREETER_EXTENSIONS_DATA_DIR@
+GDM_SIMPLE_GREETER_PLUGINS_DIR = @GDM_SIMPLE_GREETER_PLUGINS_DIR@
 GDM_USERNAME = @GDM_USERNAME@
 GDM_WORKING_DIR = @GDM_WORKING_DIR@
 GDM_XAUTH_DIR = @GDM_XAUTH_DIR@
@@ -408,11 +411,14 @@ edit = sed \
 	-e 's|@SYSCONFDIR[@]|$(sysconfdir)|g' \
 	-e 's|@LIBDIR[@]|$(libdir)|g' \
 	-e 's|@LIBEXECDIR[@]|$(libexecdir)|g' \
-	-e 's|@LOCALSTATEDIR[@]|$(localstatedir)|g'
+	-e 's|@LOCALSTATEDIR[@]|$(localstatedir)|g' \
+	-e 's,[@]AUTHENTICATION_AGENT_DIR[@],$(AUTHENTICATION_AGENT_DIR),g'
 
 desktopdir = $(pkgdatadir)/greeter/applications
 desktop_in_files = \
+	gdm-simple-greeter.desktop.in					\
 	gnome-shell.desktop.in						\
+	polkit-gnome-authentication-agent-1.desktop.in			\
 	$(NULL)
 
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)			\
@@ -421,12 +427,16 @@ desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)			\
 	       $(NULL)
 
 EXTRA_DIST = \
+	gdm-simple-greeter.desktop.in.in				\
+	polkit-gnome-authentication-agent-1.desktop.in.in		\
 	$(desktop_in_files)						\
 	$(desktop_DATA)							\
 	$(NULL)
 
 DISTCLEANFILES = \
 	$(desktop_in_files:.desktop.in=.desktop)			\
+	polkit-gnome-authentication-agent-1.desktop.in			\
+	gdm-simple-greeter.desktop.in					\
 	$(NULL)
 
 MAINTAINERCLEANFILES = \
